--- a/DennisTheMenace/DennisTheMenace.html
+++ b/DennisTheMenace/DennisTheMenace.html
@@ -2,17 +2,38 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Dennis The Menace</title>
 </head>
 
 <body>
-<h2>Dennis The Menace</h2>
-<img src="DennisTheMenace.jpg"> 
-<img src="DennisTheMenace001.jpg"> <br>
-Series: 1951<br>
-Publisher: Post-Hall, Standard/Pines, Fawcett, Charlton, Marvel, Fantagraphics <br>
+<img src=""> 
+<img src="DennisTheMenaceMovie.jpg"> <br>
+1951-2019 Comic series by Post-Hall, Standard/Pines, Fawcett, Charlton, Marvel, Fantagraphics <br>
+1959-1963 TV Series by CBS, 1986-1988 TV Animated by CBS, 1993 Movie by Warner Bros. 
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DennisTheMenaceMovie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DennisTheMenaceTV.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DennisTheMenace.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DennisTheMenace001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DennisTheMenace002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DennisTheMenace003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DennisTheMenace004.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+
 Dennis the Menace is a daily syndicated newspaper comic strip originally created, written, and illustrated by Hank Ketcham. It debuted on March 12, 1951, in 16 newspapers and was originally distributed by Post-Hall Syndicate. It is now written and drawn by Ketcham's former assistants, Marcus Hamilton (weekdays, since 1995), Ron Ferdinand (Sundays, since 1981), and son Scott Ketcham (since 2010), and distributed to at least 1,000 newspapers in 48 countries and in 19 languages by King Features Syndicate. The comic strip usually runs for a single panel on weekdays and a full strip on Sundays.
 </p><p>
 The comic strip became so successful that it was adapted to other popular media, including several television shows, both live-action and animated, and several feature films, including theatrical and direct-to-video releases.
