--- a/DexterTheDemon/DexterTheDemon.html
+++ b/DexterTheDemon/DexterTheDemon.html
@@ -7,12 +7,10 @@
 </head>
 
 <body>
-<h2>Dexter The Demon</h2>
 <img src="DexterTheDemon.jpg"> <br>
-Series: one-shot<br>
-Publisher: 1957 Atlas<br>
+1 issue in 1957 by Atlas<br>
 <p>
-Apparently Marvel was unable to get the rights to Dennis the Menace.  Dexter The Demon continued from <a href="https://blzimg.github.io/MelvinTheMonster/MelvinTheMonster.html">Melvin the Monster</a> #6 and was published for only 1 issue.
+Apparently Marvel was unable to get the rights to Dennis the Menace. Dexter The Demon continued from <a href="../MelvinTheMonster/MelvinTheMonster.html">Melvin the Monster</a> #6 and was published for only 1 issue.
 </p>
 </body>
 </html>
