--- a/DieCutVsGForce/DieCutVsGForce.html
+++ b/DieCutVsGForce/DieCutVsGForce.html
@@ -3,14 +3,12 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="../ZimStyles.css">
-<title>Die Cut Vs G Force</title>
+<title>Die Cut vs G Force</title>
 </head>
 
 <body>
-<h2>Die Cut Vs G Force</h2>
 <img src="DieCutVsGForce.jpg"> <br>
-Series: 2 issues mini-series 1993<br>
-Publisher: Marvel<br>
+2 issues in 1993 by Marvel
 <p>
 Marvel UK's two new stars team up in an intergalactic limited series, featuring a foil-enhanced cover! Professor Daniel Jones dons a gravity suit to explore MyS-TECH wormholes, but when Die-Cut shows up to help him out, Jones is lost in another dimension. Written by John Freeman. Art by John Royle and Tim Perkins. Cover by Liam Sharp.
 </p>
