--- a/Digimon/Digimon.html
+++ b/Digimon/Digimon.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Digimon</h2>
 <img src="Digimon.jpg"> <br>
-Series: 1997 Video Game, 1999 Animation (Movies and TV), $1 Billion (USD)<br>
-Publisher: Bandai<br>
+1997 Video Game, 1999 Animation (Movies and TV), $1 Billion (USD) by Bandai
 <p>
 Digimon, short for "Digital Monsters", is a Japanese media franchise encompassing virtual pet toys, anime, manga, video games, films and a trading card game. The franchise focuses on Digimon creatures, which are monsters living in a "Digital World", a parallel universe that originated from Earth's various communication networks. 
 </p><p>
