--- a/Digitek/Digitek.html
+++ b/Digitek/Digitek.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Digitek</h2>
-<img src="Digitek.jpg"> <br>
-Series: 4 issue mini-series 1992<br>
-Publisher: Marvel<br>
+<img src="Digitek.jpg"><br>
+4 issues in 1992 by Marvel
 <p>
 Jonathan Bryant is accidentally thrown into cyber-space and transformed into Digitek, the ultimate computer warrior! This 4-issue limited series also features a special appearance by Deathlok! Written by John Tomlinson and Andy Lanning. Painted art and cover by Dermot Power.
 </p>
