--- a/DinoRiders/DinoRiders.html
+++ b/DinoRiders/DinoRiders.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Dino Riders</h2>
 <img src="DinoRiders.jpg"> <br>
-Series: 3 issue mini-series<br>
-Publisher: Marvel<br>
+3 issues by Marvel
 <p>
 
 </p>
