--- a/DirtyPair/DirtyPair.html
+++ b/DirtyPair/DirtyPair.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Dirty Pair: Fatal but not Serious</h2>
 <img src="DirtyPair.jpg"> <br>
-Series: 5 issue mini-series, 1995, 1 collection<br>
-Publisher: Dark Horse<br>
+5 issues in 1995 and 1 collection TPB by Dark Horse
 <p>
 Collects Dirty Pair: Fatal But Not Serious (1995) #1-5. Written by Adam Warren. Art by Adam Warren, Karl Story, Tom Simmons, Robert DeJesus, Jason Martin, Jim Royal. Cover by Adam Warren. The Dirty Pair have fought hard to maintain a reputation as the roughest, toughest "trouble consultants" in the United Galactica. They've battled murderers, bootleggers, mercenaries, and entire space armadas, all in the line of duty! But now the dangerous duo must face their greatest challenge yet: a convention center full of Dirty-Pair groupies! And somewhere, lurking among the metal-bikini-clad-costume-contest losers, the cyborg autograph hounds, and the preachers of impending Armageddon, a fanatical cadre of genetic terrorists and a neurochemically imbalanced, homicidal Yuri clone share a common goal: to wipe out the Dirty Pair! 
 </p>
