--- a/Destroyer/Destroyer.html
+++ b/Destroyer/Destroyer.html
@@ -7,12 +7,11 @@
 </head>
 
 <body>
-<h2>Destroyer</h2>
 <img src="Destroyer.jpg"> <br>
-Series: 2009, 5 issue mini-series<br>
-Publisher: Max (Marvel)<br>
+5 issues in 2009 by Max (Marvel)
 <p>
 Written by ROBERT KIRKMAN Penciled by CORY WALKER Cover by JASON PEARSON. For sixty years, Keen Marlowe has been a super hero, taking down bad guys, fighting the good fight. But it's is about to come crashing to an end. See, Marlowe is dying -- maybe today, maybe tomorrow, the only question is when. But Marlowe isn't about to go quietly into the night. Before he goes, he intends to leave the world a safer place for his family. And if that means hunting down -- and murdering -- every super-villain he can, so be it. They don't call him 'Destroyer' for nothing. 
 </p>
+
 </body>
 </html>
