--- a/DevilDinosaur/DevilDinosaur.html
+++ b/DevilDinosaur/DevilDinosaur.html
@@ -2,33 +2,45 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Devil Dinosaur</title>
 </head>
 
 <body>
-<h2>Devil Dinosaur</h2>
+Devil Dinosaur<br>
 <img src="DevilDinosaur.jpg"> <br>
-Series: 1978, 9 issues<br>
-Publisher: Marvel<br>
+9 issues in 1978 by Marvel
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DevilDinosaur.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DevilDinosaur001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DevilDinosaur002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DevilDinosaur003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DevilDinosaur004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DevilDinosaur005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DevilDinosaur006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DevilDinosaur007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DevilDinosaur008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DevilDinosaur009.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Devil Dinosaur is a fictional character appearing in American comic books published by Marvel Comics. Devil Dinosaur resembles a red Tyrannosaurus Rex. He first appeared in Devil Dinosaur #1 (April 1978). Devil Dinosaur and his inseparable ape-like friend, Moon-Boy, are natives of "Dinosaur World", a version of Earth in a parallel universe where dinosaurs co-exist with tribes of primitive humanoid beings.
 </p><p>
 Devil Dinosaur and Moon-Boy are the creations of artist Jack Kirby who scripted and penciled all nine issues of the first series. Devil Dinosaur was created during Kirby's third stint at Marvel (1975–1978). Having learned that DC Comics was working on an animated series featuring Kirby's Kamandi, Marvel attempted to one-up their competitor by instructing Kirby to create a series similar to Kamandi, but incorporating a dinosaur co-star, since dinosaurs were hugely popular with young audiences of the time. 
 </p><p>
 The resulting Devil Dinosaur series was short lived, lasting only nine months (April – December 1978), and the proposed animated series never entered development. The original Devil Dinosaur series chronicled Devil and Moon-Boy's adventures in their home, "Dinosaur World". After the cancellation of Devil Dinosaur, the character’s appearances were relegated to one-shot comics, cameos, and supporting roles in other series.
 </p>
-Issues:<ul>
-<li><a href="DevilDinosaur001.html">Devil Dinosaur #1</a></li>
-<li><a href="DevilDinosaur002.html">Devil Dinosaur #2</a></li>
-<li><a href="DevilDinosaur003.html">Devil Dinosaur #3</a></li>
-<li><a href="DevilDinosaur004.html">Devil Dinosaur #4</a></li>
-<li><a href="DevilDinosaur005.html">Devil Dinosaur #5</a></li>
-<li><a href="DevilDinosaur006.html">Devil Dinosaur #6</a></li>
-<li><a href="DevilDinosaur007.html">Devil Dinosaur #7</a></li>
-<li><a href="DevilDinosaur008.html">Devil Dinosaur #8</a></li>
-<li><a href="DevilDinosaur009.html">Devil Dinosaur #9</a></li>
-</ul>
 
 </body>
 </html>
