--- a/DieCut/DieCut.html
+++ b/DieCut/DieCut.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Die-Cut</h2>
 <img src="DieCut.jpg"> <br>
-Series: 4 issue mini-series, 1993<br>
-Publisher: Marvel<br>
+4 issues in 1993 by Marvel
 <p>
 Die-Cut premieres with (what else?) a die-cut cover! The X-Men's Beast is captured by a group of twisted scientists who aim to create havoc with his genetic material, and this new hero from Marvel UK must stop them before it's too late! Written by Glenn Dakin. Art by Bernard Custodio.
 </p>
