--- a/Discworld/Discworld.html
+++ b/Discworld/Discworld.html
@@ -2,17 +2,44 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Discworld</title>
 </head>
 
 <body>
-<h2>Discworld</h2>
 <img src="Discworld.jpg"> <br>
-Creator: Terry Prachett<br>
-Series: 41 novels<br>
-Publisher: Random House<br>
+Created by Terry Prachett<br>
+41 novels from 1983-2015 by Random House<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Discworld.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Discworld01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Discworld02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Discworld03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Discworld04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Discworld05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Discworld06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Discworld07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Discworld08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Discworld09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Discworld10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Discworld11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Discworld12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Discworld13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Discworld14.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Discworld is a comic fantasy book series written by the English author Terry Pratchett (1948–2015), set on the fictional Discworld, a flat disc balanced on the backs of four elephants which in turn stand on the back of a giant turtle, Great A'Tuin. The books frequently parody or take inspiration from J. R. R. Tolkien, Robert E. Howard, H. P. Lovecraft, Charles Dickens and William Shakespeare, as well as mythology, folklore and fairy tales, often using them for satirical parallels with current cultural, political and scientific issues. The series is popular, with more than 80 million books sold in 37 languages.
 </p><p>
 Forty-one Discworld novels have been published. After Pratchett was diagnosed with Alzheimer's disease, he said that he would be happy for his daughter Rhianna to continue the series when he could no longer do so. However, Rhianna has stated she will only be involved in spin-offs, adaptations and tie-ins, and that there will be no more novels. The original British editions of the first 26 novels, up to Thief of Time (2001), had distinctive cover art by Josh Kirby. The American editions, published by Harper Collins, used their own cover art. Since Kirby's death in October 2001, the covers have been designed by Paul Kidby. Companion publications include eleven short stories (some only loosely related to the Discworld), four popular science books, and a number of supplementary books and reference guides. In addition, the series has been adapted for graphic novels, theatre, computer and board games, and television.
