--- a/DMZ/DMZ.html
+++ b/DMZ/DMZ.html
@@ -2,17 +2,39 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>DMZ</title>
 </head>
 
 <body>
-<h2>DMZ</h2>
 <img src="DMZ.jpg"> <br>
-Series: 72 issues, 2006<br>
-Publisher: Vertigo (DC)<br>
+72 issues from 2006-2012, 5 issues 2016 by Vertigo (DC)<br>
+Written by Brian Wood Art and cover by Wood &amp; Riccardo Burchielli.
 <p>
-Written by Brian Wood Art and cover by Wood &amp; Riccardo Burchielli. 
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DMZ.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DMZ01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DMZ02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DMZ03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DMZ04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DMZ05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DMZ06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DMZ07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DMZ08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DMZ09.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
 </p><p>
 In the near future, America's worst nightmare has come true. With military adventurism overseas bogging down the Army and National Guard, the U.S. government mistakenly neglects the very real threat of anti-establishment militias scattered across the 50 states. Like a sleeping giant, Middle America rises up and violently pushes its way to the shining seas, coming to a standstill at the line in the sand, Manhattan or, as the world now knows it, the DMZ. 
 </p><p>
