--- a/DisneyAfternoon/DisneyAfternoon.html
+++ b/DisneyAfternoon/DisneyAfternoon.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Disney Afternoon</h2>
 <img src="DisneyAfternoon.jpg"> <br>
-Series: 10 issue min-series, 1994<br>
-Publisher: Marvel<br>
+10 issues in 1994 by Marvel
 <p>
 It's Darkwing Duck to the rescue as he takes on the Fearsome Five in an action-packed adventure! Disney Afternoon presents fresh, new characters in brand new, exciting escapades. Join TaleSpin, Goof Troop, Bonkers and more for hilarious fun! Written by John Blair Moore, Roger Brown and Janet Gilbert. Pencils by John Blair Moore, Cosme Quartieri, Andres Klacik and Rick Stasi. Cover by John Blair Moore and Andres Klacik.
 </p>
