--- a/DisneyPrincess/DisneyPrincess.html
+++ b/DisneyPrincess/DisneyPrincess.html
@@ -7,9 +7,8 @@
 </head>
 
 <body>
-<h2>Disney Princess</h2>
 <img src="DisneyPrincess.jpg"> <br>
-Publisher: Disney<br>
+Established in 2000 by Disney<br>
 <p>
 Disney Princess, also called the Princess Line, is a media franchise owned by The Walt Disney Company. Created by Disney Consumer Products chairman Andy Mooney in the early 2000s, the franchise features a line-up of fictional female protagonists who have appeared in various Disney franchises.
 </p><p>
