--- a/Division13/Division13.html
+++ b/Division13/Division13.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Division 13</h2>
 <img src="Division13.jpg"> <br>
-Series: 4 issue mini series, 1994 <br>
-Publisher: Dark Horse<br>
+4 issues in 1994 by Dark Horse
 <p>
 Written by KEITH GIFFEN. Art by ALEXANDER MORRISSEY &amp; BRUCE PATTERSON. Cover by ART ADAMS. They're not out to save the world...they just want to survive it! The four member team of Division 13 debut in their own series as they storm Block 13 to rescue the Vortex-infected prisoners there - but they find only wreckage, devastation and chaos. And the excitement triples with the unexpected arrival - and first appearance - of LAW! 
 </p>
