--- a/DocSamson/DocSamson.html
+++ b/DocSamson/DocSamson.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Doc Samson</h2>
 <img src="DocSamson.jpg"> <br>
-Series: 4 issue mini-series, 1996<br>
-Publisher: Marvel<br>
+4 issues in 1996 by Marvel
 <p>
 Bursting from the pages of The Incredible Hulk! Guest-starring the Hulk and She-Hulk. 'Silence of the Lambs' gets gamma bombed when the green goliath's favorite psychiatrist leaps into his own limited series! A gamma-spawned serial killer is on the loose, and only Doc Samson can bring him down! Written by Dan Slott. Art by Ken Lashley, Tom Wegrzyn and Art Nichols. Cover pencils by Ken Lashley. 
 </p>
