--- a/DocStearnMrMonster/DocStearnMrMonster.html
+++ b/DocStearnMrMonster/DocStearnMrMonster.html
@@ -2,17 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Doc Stearn Mr. Monster</title>
 </head>
 
 <body>
-<h2>Doc Stearn Mr. Monster</h2>
 <img src="DocStearnMrMonster.jpg"> <br>
 Creator: Michael T. Gilbert<br>
-Series: 10 issues, 1985<br>
-Publisher: Eclipse<br>
+10 issues in 1985 by Eclipse
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DocStearnMrMonster.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DocStearnMrMonster02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DocStearnMrMonster03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DocStearnMrMonster04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DocStearnMrMonster05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DocStearnMrMonster06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DocStearnMrMonster07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DocStearnMrMonster08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DocStearnMrMonster09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DocStearnMrMonster10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 Doc Stearn...Mr. Monster is a fictional character comic book superhero created by Michael T. Gilbert, most recently published by Dark Horse Comics. The character first appeared in Pacific Comics Vanguard Illustrated #7 (July 1984). Later the character graduated to his own monthly series Doc Stearn...Mr. Monster from Eclipse Comics. Mr. Monster was derived from an old 1940's character created by Fred Kelly who appeared only twice in 1940s Canadian comic books (Triumph Comics #31, 1946, and Super-Duper Comics #3, 1947). After trademarking Mr. Monster, Gilbert heavily revised the character creating a Horror/Humor hybrid which often featured heavy satire of both the horror genre and superhero comics in general.
 </p><p>
 "The Case of the Reluctant Werewolf." This first issue introduces Mr. Monster, a creature-killer in the vein (so to speak) of Van Helsing. A less-than-fearsome werewolf seeks the aid of the titular monster hunter. The series as a whole pays homage to classic monster/horror comics of the 1950s. Script, pencils, and cover by Michael T. Gilbert. Inks by William Messner Loebs.
