--- a/DoctorDoomMastersOfEvil/DoctorDoomMastersOfEvil.html
+++ b/DoctorDoomMastersOfEvil/DoctorDoomMastersOfEvil.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Doctor Doom and the Masters Of Evil</h2>
 <img src="DoctorDoomMastersOfEvil.jpg"> <br>
-Series: 4 issue mini-series<br>
-Publisher: Marvel<br>
+4 issues in 2009 by Marvel
 <p>
 Written by PAUL TOBIN Art by PATRICK SCHERBERGER Cover by ROGER CRUZ ALL NEW TALES!!! 
 </p><p>
