--- a/DoctorJekyllAndMrHyde/DoctorJekyllAndMrHyde.html
+++ b/DoctorJekyllAndMrHyde/DoctorJekyllAndMrHyde.html
@@ -8,9 +8,33 @@
 </head>
 
 <body>
-<img src="DoctorJekyllAndMrHyde1.jpg"> <img src="DoctorJekyllAndMrHyde2.jpg"> <br>
+<img src="DoctorJekyllAndMrHyde1.jpg"><br>
 Novel by Robert Louis Stevenson 1886<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DoctorJekyllAndMrHyde1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorJekyllAndMrHyde2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorJekyllAndMrHyde3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorJekyllAndMrHyde4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorJekyllAndMrHyde5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorJekyllAndMrHyde6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorJekyllAndMrHyde7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorJekyllAndMrHyde8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorJekyllAndMrHyde9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorJekyllAndMrHyde10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 Strange Case of Dr Jekyll and Mr Hyde is a gothic novella by the Scottish author Robert Louis Stevenson first published in 1886. The work is also known as The Strange Case of Dr. Jekyll and Mr. Hyde, Dr. Jekyll and Mr. Hyde, or simply Jekyll &amp; Hyde. 
 </p><p>
 It is about a London lawyer named Gabriel John Utterson who investigates strange occurrences between his old friend, Dr Henry Jekyll, and the evil Edward Hyde. The novella's impact is such that it has become a part of the language, with the very phrase "Jekyll and Hyde" entering the vernacular to refer to people with an unpredictably dual nature: usually very good, but sometimes shockingly evil instead.
