--- a/DirtyPair/DirtyPair.html
+++ b/DirtyPair/DirtyPair.html
@@ -3,14 +3,31 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="../ZimStyles.css">
-<title>Dirty Pair: Fatal but not Serious</title>
+<title>Dirty Pair</title>
 </head>
 
 <body>
 <img src="DirtyPair.jpg"> <br>
-5 issues in 1995 and 1 collection TPB by Dark Horse
+1 TV series 1985, 1 movie 1986, 4 issues 1988 by Eclipse, 5 issues 1994-1995 by Viz
 <p>
-Collects Dirty Pair: Fatal But Not Serious (1995) #1-5. Written by Adam Warren. Art by Adam Warren, Karl Story, Tom Simmons, Robert DeJesus, Jason Martin, Jim Royal. Cover by Adam Warren. The Dirty Pair have fought hard to maintain a reputation as the roughest, toughest "trouble consultants" in the United Galactica. They've battled murderers, bootleggers, mercenaries, and entire space armadas, all in the line of duty! But now the dangerous duo must face their greatest challenge yet: a convention center full of Dirty-Pair groupies! And somewhere, lurking among the metal-bikini-clad-costume-contest losers, the cyborg autograph hounds, and the preachers of impending Armageddon, a fanatical cadre of genetic terrorists and a neurochemically imbalanced, homicidal Yuri clone share a common goal: to wipe out the Dirty Pair! 
+Dirty Pair is a series of Japanese light novels (the first one being a fix-up) written by Haruka Takachiho and illustrated by Yoshikazu Yasuhiko that was later adapted into anime and manga versions. The first stories that make up the first volume were first published on the S-F Magazine. The franchise has bounced across multiple formats and production companies, resulting in (so far) eight novels and a few shorter stories, a television series, two OVA series, two OVA features, a feature film, a number of graphic novels, and two short Japanese radio series. The 1985 television series won the Animage Anime Grand Prix prize for that year.
+</p><p>
+An anime television series based on the novels, simply titled Dirty Pair, ran for 26 episodes that aired on Nippon Television affiliates from July to December 1985. Dirty Pair: Project Eden, known in Japan as Dirty Pair: The Movie, is a feature-length anime film based on the Dirty Pair anime series originally released in Japan on November 28, 1986.
+<ul>
+<li>The Dirty Pair's Great Adventures), 1979; book: 1980, won the 1980 Seiun Award　
+<li>The Dirty Pair Strike Again), 1985; book: 1985, won the 1985 Seiun Award
+<li>DP's Rough and Tumble), 1985–87; book: 1987
+<li>DP's Great Escape), 1991–92; book: 1993
+<li>(Legacy of the Dictator)—Dirty Pair Side Story #1, 1997; book: 1998
+<li>(DP's Great Resurrection), 2004
+<li>(DP's Great Conquest), 2006
+<li>(DP's Great Empire), 2007 - conclusion of the preceding novel
+</ul>
+
+</p><p>
+The stories take place in the years 2138–43, by which time humanity has spread across some few thousand star systems. A corporation called the World Welfare Works Association (WWWA or 3WA) helps member systems of the United Galactica (UG) federation deal with various planetary-scale problems, for profit, by sending agents called "trouble consultants". The series focuses on a team of trouble consultants in that section, named Kei and Yuri, who have a reputation for leaving a trail of destruction behind them, for which they are known publicly as the "Dirty Pair".
+</p><p>
+Kei and Yuri are the two members of Trouble Consultant team 234, code named "Lovely Angels". Almost every mission they are involved with ends up in disaster, but not failure (they will catch the crook, but a city may be destroyed in the process), and thus they are more generally known as the "Dirty Pair", a nickname they hate. They are always cleared of any wrongdoing by the 3WA's Central Computer because the extreme collateral damage is never actually their fault (though their mere presence has been known to make things worse). In some but not all continuities, they have joint extrasensory perception powers, usually limited to precognition. This talent was the reason they were recruited in the first place.
 </p>
 
 </body>
