--- a/DoctorStrange/DoctorStrange.html
+++ b/DoctorStrange/DoctorStrange.html
@@ -8,13 +8,10 @@
 </head>
 
 <body>
-<h2>Doctor Strange</h2>
 <img src="DoctorStrange.jpg"> <br>
-Series: 1968<br>
-Publisher: Marvel<br>
+1963 to 2019 coimc series by Marvel, 1 season TV series in 1978, Movie in 2016.
 <p>
-First series in his own book. Numbering continues from <a href="../StrangeTales/StrangeTales168.html">Strange Tales #168</a> (Marvel, 1951 series); first appearance in <a href="../StrangeTales/StrangeTales110b.html">Strange Tales #110</a> sharing that book with Nick Fury: Agent of S.H.I.E.L.D. from #135 - #168.
-</p><p>
+
 <div class="row">
 <div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -43,20 +40,19 @@ First series in his own book. Numbering continues from <a href="../StrangeTales/
 </div>
 </div>
 
-<ul>
-<li><a href="DoctorStrange169.html">Doctor Strange #169</a></li>
-<li><a href="DoctorStrange170.html">Doctor Strange #170</a></li>
-<li><a href="DoctorStrange171.html">Doctor Strange #171</a></li>
-<li><a href="DoctorStrange172.html">Doctor Strange #172</a></li>
-<li><a href="DoctorStrange173.html">Doctor Strange #173</a></li>
-<li><a href="DoctorStrange174.html">Doctor Strange #174</a></li>
-<li><a href="DoctorStrange175.html">Doctor Strange #175</a></li>
-<li><a href="DoctorStrange176.html">Doctor Strange #176</a></li>
-<li><a href="DoctorStrange177.html">Doctor Strange #177</a></li>
-<li><a href="DoctorStrange178.html">Doctor Strange #178</a></li>
-<li><a href="DoctorStrange179.html">Doctor Strange #179</a></li>
-<li><a href="DoctorStrange180.html">Doctor Strange #180</a></li>
-</ul>
+</p><p>
+First series in his own book. Numbering continues from <a href="../StrangeTales/StrangeTales168.html">Strange Tales #168</a> (Marvel, 1951 series); first appearance in <a href="../StrangeTales/StrangeTales110b.html">Strange Tales #110</a> in 1963 sharing that book with Nick Fury: Agent of S.H.I.E.L.D. from #135-168.
+</p><p>
+The character was first portrayed in live-action by Peter Hooten in the 1978 television film Dr. Strange. Benedict Cumberbatch portrays the character in the Marvel Cinematic Universe films Doctor Strange (2016), Thor: Ragnarok (2017), Avengers: Infinity War (2018), and Avengers: Endgame (2019). Cumberbatch will return to portray the character in the sequel Doctor Strange in the Multiverse of Madness (2021).
+</p><p>
+Doctor Strange serves as the Sorcerer Supreme, the primary protector of Earth against magical and mystical threats. Inspired by stories of black magic and Chandu the Magician, Strange was created during the Silver Age of Comic Books to bring a different kind of character and themes of mysticism to Marvel Comics.
+</p><p>
+The character's origin story indicates that he was once an egotistical surgeon. After a car crash severely damages his hands and hinders his ability to perform surgery, he searches the globe for a way to repair them and encounters the Ancient One, the then-holder of the title Sorcerer Supreme. 
+</p><p>
+After becoming one of the old Sorcerer Supreme's students, Strange becomes a practitioner of both the mystical arts and the martial arts. He has a suit consisting of two main relics, the Cloak of Levitation and the Eye of Agamotto, which give him added powers. 
+</p><p>
+Strange is aided along the way by his friend and valet, Wong, and a large assortment of mystical objects. He takes up residence in a mansion called the Sanctum Sanctorum, located in New York City. Later, Strange takes the title of Sorcerer Supreme to help to defend the world against future threats.
+</p>
 
 </body>
 </html>
