--- a/DoctorStrangeClassics/DoctorStrangeClassics.html
+++ b/DoctorStrangeClassics/DoctorStrangeClassics.html
@@ -2,19 +2,33 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Doctor Strange Classics</title>
 </head>
 
 <body>
-<h2>Doctor Strange Classics</h2>
-<img src="DoctorStrangeClassics.jpg"> 
-<img src="DoctorStrangeClassics2.jpg"> 
-<img src="DoctorStrangeClassics3.jpg"> 
-<img src="DoctorStrangeClassics4.jpg"> <br>
-Series: 4 issue mini-series, 1984 <br>
-Publisher: Marvel<br>
+<img src="DoctorStrangeClassics.jpg"><br>
+4 issues in 1984 by Marvel
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DoctorStrangeClassics.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorStrangeClassics2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorStrangeClassics3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorStrangeClassics4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 #1 New pin-ups by Kevin Nowlan, Jon Jay Muth, and Carl Potts. All of the stories are Stan Lee/Steve Ditko reprints: "The Defeat of Dr. Strange" (from Strange Tales 130), "The Hunter and the Hunted!" (ST 131), and "Face-To-Face At Last With Baron Mordo!" (ST 132). New Al Milgrom/John Byrne wraparound cover.
 </p><p>
 #2 New pin-ups by Tony Salmons, Al Milgrom, and Dan Green. All of the stories are Stan Lee/Steve Ditko reprints: "A Nameless Land, a Timeless Time!" (from Strange Tales 133), "Earth Be My Battleground" (ST 134), and "Eternity Beckons!" (ST 135). New John Byrne/Milgrom wraparound cover.
