--- a/DoctorStrangeDoctorDoom/DoctorStrangeDoctorDoom.html
+++ b/DoctorStrangeDoctorDoom/DoctorStrangeDoctorDoom.html
@@ -7,15 +7,12 @@
 </head>
 
 <body>
-<h2>Doctor Strange Doctor Doom: Triumph &amp; Torment</h2>
 <img src="DoctorStrangeDoctorDoom.jpg"> <br>
-Series: Graphic Novel<br>
-Publisher: Marvel<br>
+1 issue by Marvel in 1989<br>
 <p>
 Written by Roger Stern. Art by Mike Mignola and Mark Badger. Doctor Doom has a cunning plan to rescue his Mother's soul from Mephisto. All he needs is the unwilling help of Doctor Strange. Special guest-appearance by the Ancient One.
 </p><p>
 Every year on Midsummer's Eve, Victor von Doom clashes with the forces of evil in a vain attempt to free his mother's soul from Hell. Only when Doctor Stephen Strange -- Master of the Mystic Arts and Earth's Sorcerer Supreme -- is convinced to join the fight, does the outcome have any hope of changing. But first these unlikely allies must journey to Mephisto's infernal realm ... where they find that the cost of one soul may be more than they are willing to pay!
-
 </p>
 
 </body>
