--- a/DoctorStrangeTheOath/DoctorStrangeTheOath.html
+++ b/DoctorStrangeTheOath/DoctorStrangeTheOath.html
@@ -2,17 +2,34 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Doctor Strange The Oath</title>
 </head>
 
 <body>
-<h2>Doctor Strange The Oath</h2>
 <img src="DoctorStrangeTheOath.jpg"> <br>
-Series: 5 issue mini-series<br>
-Publisher: Marvel<br>
+Written by Brian Vaughan. Illustrations by Marcos Martin<br>
+5 issues by Marvel
 <p>
-Written by Brian Vaughan. Illustrations by Marcos Martin. 
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DoctorStrangeTheOath.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorStrangeTheOath2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorStrangeTheOath3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorStrangeTheOath4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorStrangeTheOath5.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
 </p><p>
 Doctor Stephen Strange embarks on the most important paranormal investigation of his career, as he sets out to solve an attempted murder...his own! And with his most trusted friend also at death's door, Strange turns to an unexpected corner of the Marvel Universe to recruit a new ally for an adventure that will take the Sorcerer Supreme from the underworld of New York City to the deadliest dimensions on the outskirts of reality. This limited series will firmly establish Doctor Strange in the current Marvel Universe as well as setting him up to join a surprising new team!
 </p><p>
