--- a/DoctorVoodoo/DoctorVoodoo.html
+++ b/DoctorVoodoo/DoctorVoodoo.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Doctor Voodoo</h2>
-<img src="DoctorVoodoo.jpg"> <br>
-Series: 5 issue mini-series, 2009<br>
-Publisher: Marvel<br>
+<img src="DoctorVoodoo.jpg"><br>
+5 issues in 2009 by Marvel
 <p>
 Cover by MARKO DJURDJEVIC. Written by RICK REMENDER. Art by JEFTE PALO. Launching from the pages of New Avengers, Jericho Drumm assumes the role of Marvel's new Sorcerer Supreme as DOCTOR VOODOO! 
 </p><p>
