--- a/DoctorStrangeDracula/DoctorStrangeDracula.html
+++ b/DoctorStrangeDracula/DoctorStrangeDracula.html
@@ -7,12 +7,11 @@
 </head>
 
 <body>
-<h2>Doctor Strange vs. Dracula</h2>
 <img src="DoctorStrangeDracula.jpg"> <br>
-Series: one-shot, 1994<br>
-Publisher: Marvel<br>
+1 issue in 1994 by Marvel
 <p>
 This 48-page horror fest pits the master of the mystic arts versus Dracula! Don't miss the epic reprinted from Tomb of Dracula (1972 1st Series) #44 and Doctor Strange (1974 2nd Series) #14. A special bonus: a story from Vampire Tales (1973) #9. Written by Marv Wolfman, Steve Englehart and Doug Moench. Art by Gene Colan, Tom Palmer and Russ Heath. Cover by Kyle Baker.
 </p>
+
 </body>
 </html>
