--- a/DoctorWho/DoctorWho.html
+++ b/DoctorWho/DoctorWho.html
@@ -2,30 +2,67 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Doctor Who</title>
 </head>
-
 <body>
-<h2>Doctor Who</h2>
-<img src="DoctorWho.jpg"> <img src="Tardis.jpg"> <br>
-Series: 23 issues, 1984 - 1986<br>
-Publisher: Marvel<br>
+
+<img src="DoctorWho.jpg"> <br>
+TV Series 1963-2019 by BBC. Comic series 23 issues, 1984-1986 by Marvel
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DoctorWho01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorWho02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorWho03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorWho04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorWho05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorWho06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorWho07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorWho08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorWho09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorWho10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DoctorWho11.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Doctor Who is a British science fiction television programme produced by the BBC since 1963. The programme depicts the adventures of a Time Lord called "the Doctor", an extraterrestrial being, to all appearances human, from the planet Gallifrey. The Doctor explores the universe in a time-travelling space ship called the TARDIS. Its exterior appears as a blue British police box, which was a common sight in Britain in 1963 when the series first aired. Accompanied by a number of companions, the Doctor combats a variety of foes while working to save civilisations and help people in need.
+</p><p>
 Doctor Who follows the adventures of the primary character, a rogue Time Lord from the planet Gallifrey, who goes by the name "the Doctor". He fled Gallifrey in a stolen TARDIS, "Time and Relative Dimension in Space", a time machine that travels by materializing into and dematerialize out of the time matrix. The TARDIS has a vast interior but appears smaller on the outside, and is equipped with a "chameleon circuit" intended to make the machine take on the appearance of local objects as a disguise; due to a malfunction, the Doctor's TARDIS remains fixed as a blue British police box.
 </p><p>
-The Doctor often finds events that pique his curiosity as he tries to prevent evil forces from harming innocent people or changing history, using only his ingenuity and minimal resources, such as his versatile sonic screwdriver. He rarely travels alone and often brings one or more companions to share these adventures. His companions are usually humans, as he has found a fascination with planet Earth, and he frequently collaborates with the international military task force UNIT when the Earth itself is threatened. As a Time Lord, the Doctor is centuries-old and has the ability to regenerate when his body is mortally damaged, taking on a new appearance and personality. The Doctor has gained numerous reoccurring enemies during his travels, including the Daleks, the Cybermen, and the Master, another renegade Time Lord.
-</p><p>
-Issues: <ul>
-<li><a href="DoctorWho01.html">Doctor Who #1</li>
-<li><a href="DoctorWho02.html">Doctor Who #2</li>
-<li><a href="DoctorWho03.html">Doctor Who #3</li>
-<li><a href="DoctorWho04.html">Doctor Who #4</li>
-<li><a href="DoctorWho05.html">Doctor Who #5</li>
-<li><a href="DoctorWho06.html">Doctor Who #6</li>
-<li><a href="DoctorWho07.html">Doctor Who #7</li>
+Producers introduced the concept of regeneration to permit the recasting of the main character. This was prompted by the poor health of the original star, William Hartnell. The term "regeneration" was not conceived until the Doctor's third on-screen regeneration; Hartnell's Doctor merely described undergoing a "renewal", and the Second Doctor underwent a "change of appearance". The device has allowed for the recasting of the actor various times in the show's history, as well as the depiction of alternative Doctors either from the Doctor's relative past or future. The following list of actors matches the photo collage above from top to bottom, left to right: 
+<ul>
+<li>William Hartnell	First Doctor	1963–66
+<li>Patrick Troughton	Second Doctor	1966–69
+<li>Jon Pertwee	Third Doctor	1970–74
+<li>Tom Baker	Fourth Doctor	1974–81
+<li>Peter Davison	Fifth Doctor	1982–84
+<li>Colin Baker	Sixth Doctor	1984–86
+<li>Sylvester McCoy	Seventh Doctor	1987–89
+<li>Paul McGann	Eighth Doctor	1996
+<li>Christopher Eccleston	Ninth Doctor	2005
+<li>David Tennant	Tenth Doctor	2005–10
+<li>Matt Smith	Eleventh Doctor	2010–13
+<li>Peter Capaldi	Twelfth Doctor	2014–17
+<li>Jodie Whittaker	Thirteenth Doctor	2018–present
+</ul>
 
-</ul></p>
+</p><p>
+The comic-strip adventures of the Doctor appeared almost from the beginning of the television series, first in the 1960s publication TV Comic and then during the 1970s in the mainly Gerry Anderson-related comic Countdown, later renamed TV Action. After TV Action ceased publication, the strip returned to TV Comic until 1978. Both the First and Second Doctors were, for a time, shown travelling with two children named John and Gillian who were identified as the Doctor's grandchildren. Their place within established continuity has challenged fans ever since, although various spin-off fiction venues have attempted to reconcile their existence.
+</p><p>
+A comic strip also regularly appeared in the pages of Doctor Who Magazine. This began as a Marvel Comics publication under the name Doctor Who Weekly in 1979 (soon changing to Doctor Who Monthly), and the magazine continued to be published after the programme ceased production in 1989. The comic strip has usually featured the current Doctor in a series of adventures independent of the novels and the audios, and with another companion, though several crossovers with the worlds of the audio and literary Doctor Who and the comics have occurred. Creators who have worked on the Doctor Who Magazine strip include such notables as writer Alan Moore and artists Dave Gibbons, Mike McMahon, and John Ridgway. Selected stories were reprinted in North America by Marvel Comics, which was also the publisher of Doctor Who Magazine at the time. 
+</p><p>
+<a href="../MarvelPremiere/MarvelPremiere.html">Marvel Premiere #57</a> (December 1980) was the first Doctor Who comic published in North America.
+</p>
 
 </body>
 </html>
