--- a/DoctorZero/DoctorZero.html
+++ b/DoctorZero/DoctorZero.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Doctor Zero</h2>
 <img src="DoctorZero.jpg"> <br>
-Series: 8 issue mini-series, 1988<br>
-Publisher: Marvel<br>
+8 issues in 1988 by Marvel<br>
 <p>
 Cover by Bill Sienkiewicz. The Shadow Dwellers character profile by D.G. Chichester and Margaret Clark. "Shadows Of Troy," script by D. G. Chichester and Margaret Clark, pencils by Denys Cowan, inks by Bill Sienkiewicz; Humanity has brought the world to the brink of destruction; Dr. Zero's got the power to save it... but who can save us from him?! Ads for Marshal Law, Elektra, and Powerline.
 </p>
