--- a/kb.html
+++ b/kb.html
@@ -4528,8 +4528,8 @@ Creative Knowledgebase<br>
 
 <tr>
 <td>Doctor Who</td>
-<td>1984</td>
-<td>Marvel</td>
+<td>1963</td>
+<td>BBC</td>
 <td><a href="DoctorWho/DoctorWho.html">Details</a></td>
 </tr>
 
